platform/istio/aws-dev/authz-rate-limit/aws-local-rate-limit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: medikong-aws-local-rate-limit
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-ingressgateway
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.local_ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            stat_prefix: medikong_aws_local_rate_limiter
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          name: http.80
          vhost:
            route:
              name: order
      patch:
        operation: MERGE
        value:
          typed_per_filter_config:
            envoy.filters.http.local_ratelimit:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: medikong_aws_order_local_rate_limit
              token_bucket:
                max_tokens: 120
                tokens_per_fill: 10
                fill_interval: 1s
              filter_enabled:
                runtime_key: medikong_aws_order_local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: medikong_aws_order_local_rate_limit_enforced
                default_value:
                  numerator: 100
                  denominator: HUNDRED
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          name: http.80
          vhost:
            route:
              name: payment
      patch:
        operation: MERGE
        value:
          typed_per_filter_config:
            envoy.filters.http.local_ratelimit:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: medikong_aws_payment_local_rate_limit
              token_bucket:
                max_tokens: 120
                tokens_per_fill: 10
                fill_interval: 1s
              filter_enabled:
                runtime_key: medikong_aws_payment_local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: medikong_aws_payment_local_rate_limit_enforced
                default_value:
                  numerator: 100
                  denominator: HUNDRED
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          name: http.80
          vhost:
            route:
              name: notification
      patch:
        operation: MERGE
        value:
          typed_per_filter_config:
            envoy.filters.http.local_ratelimit:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: medikong_aws_notification_local_rate_limit
              token_bucket:
                max_tokens: 120
                tokens_per_fill: 10
                fill_interval: 1s
              filter_enabled:
                runtime_key: medikong_aws_notification_local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: medikong_aws_notification_local_rate_limit_enforced
                default_value:
                  numerator: 100
                  denominator: HUNDRED
